# synthia

./: CMakeLists.txt  LICENSE  README.md
synthesizers/: MoogVoice.cc  MoogVoice.h  SynthVoice.cc  SynthVoice.h  Synthesizer.cc  Synthesizer.h
synthia/: Controllable.cc  Controllable.h  Delay.cc  Delay.h  Effect.h  Envelope.cc  Envelope.h  Frames.cc  Frames.h  Generator.cc  Generator.h  Lowpass.cc  Lowpass.h  PolyBlepOscillator.cpp  PolyBlepOscillator.h  PulseOscillator.cc  PulseOscillator.h  RetriggerGlitch.cpp  RetriggerGlitch.h  SError.cpp  SError.h  SObject.cpp  SObject.h  SineOscillator.cc  SineOscillator.h  SoundFile.cc  SoundFile.h  SoundLoop.cc  SoundLoop.h  SwitchableWavetableOscillator.cc  SwitchableWavetableOscillator.h  SynthContext.cc  SynthContext.h  Synthia.h  SynthiaUtils.cc  SynthiaUtils.h  Triggerable.h  WavetableOscillator.cc  WavetableOscillator.h
util/: midi.h
